--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 ### Example user template
 
 # IntelliJ project files
-.idea
+.idea/
 *.iml
-out
-gen
+out/
+gen/
 src/main/resources/mail.properties
-target
+target/
